<resources>
    <string name="app_name">Midterm 07600448</string>
    <string name="Loginto">"Login To Facebook "</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="Prom" translatable="false">Promlert Lovichit</string>
    <string name="add">"Add to Story"</string>
    <string name="view">"View As"</string>
    <string name="Editpro">"Edit Profile"</string>
    <string name="more">More</string>
    <string name="goes">"Goes to"</string>
    <string name="Lives">"Lives in"</string>
    <string name="from">From</string>
    <string name="igoes" translatable="false">สวนกุหลาบวิทยาลัย</string>
    <string name="ilive" translatable="false">กรุงเทพทหานคร</string>
    <string name="login">Login</string>
    <string name="chaitawat" translatable="false">"Chaitawat Phootongjai"</string>
    <string name="welcome" translatable="false">Welcome</string>
</resources>
